--- a/Rush/Rush.csproj
+++ b/Rush/Rush.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Converters\ListSelectedToBool.cs" />
     <Compile Include="Extensions\DIrectoryInfoExtensions.cs" />
     <Compile Include="Models\OrganizeOrder.cs" />
+    <Compile Include="Windows\FileOrderHelpWindow.xaml.cs">
+      <DependentUpon>FileOrderHelpWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
@@ -69,7 +72,18 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Windows\ProcessWindow.xaml.cs">
+      <DependentUpon>ProcessWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Windows\FileOrderHelpWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\ProcessWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
