--- a/Rush/Rush.csproj
+++ b/Rush/Rush.csproj
@@ -74,17 +74,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controllers\FileTypesInfo.cs" />
     <Compile Include="Controllers\RushController.cs" />
+    <Compile Include="Controllers\RushFileProcessor.cs" />
     <Compile Include="Converters\BoolToColorConverter.cs" />
     <Compile Include="Converters\ComboBoxAndButtonTooltipMultiValueConverter.cs" />
+    <Compile Include="Converters\CountToDuplicateConverter.cs" />
     <Compile Include="Converters\IntToBoolConverter.cs" />
     <Compile Include="Converters\ListSelectedToBool.cs" />
     <Compile Include="Converters\OrganizeButtonController.cs" />
+    <Compile Include="Converters\ProgressToInfoConverter.cs" />
     <Compile Include="Converters\StringToBoolConverter.cs" />
     <Compile Include="Extensions\DIrectoryInfoExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Models\FileInformation.cs" />
+    <Compile Include="Models\FileNameTemplate.cs" />
     <Compile Include="Models\OrganizeOrder.cs" />
+    <Compile Include="Windows\DuplicatesWindow.xaml.cs">
+      <DependentUpon>DuplicatesWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\FileOrderHelpWindow.xaml.cs">
       <DependentUpon>FileOrderHelpWindow.xaml</DependentUpon>
     </Compile>
@@ -95,18 +103,15 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Windows\ProcessWindow.xaml.cs">
-      <DependentUpon>ProcessWindow.xaml</DependentUpon>
-    </Compile>
+    <Page Include="Windows\DuplicatesWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\FileOrderHelpWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\MainWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Windows\ProcessWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -140,7 +145,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Windows\help.png" />
+    <Resource Include="Images\help.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="logo.ico" />
