added about window

--- a/Rush/Rush.csproj
+++ b/Rush/Rush.csproj
@@ -95,6 +95,9 @@
     <Compile Include="Models\FileTypeInfo.cs" />
     <Compile Include="Models\LogItem.cs" />
     <Compile Include="Models\OrganizeOrder.cs" />
+    <Compile Include="Windows\AboutWindow.xaml.cs">
+      <DependentUpon>AboutWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\FileOrderHelpWindow.xaml.cs">
       <DependentUpon>FileOrderHelpWindow.xaml</DependentUpon>
     </Compile>
@@ -111,6 +114,10 @@
     <Compile Include="Windows\ProcessWindow.xaml.cs">
       <DependentUpon>ProcessWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="Windows\AboutWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\FileOrderHelpWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
